--- a/currency-exchange-service/src/main/resources/application.yml
+++ b/currency-exchange-service/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 ## if same key present in global then iti is overirde by specific service key
 spring:
+  profiles:
+    active: dev
   application:
-    name: currency-exchange-service
+    name: exchange-service
   config: 
     import: optional:configserver:http://localhost:8888
