--- a/spring-cloud-gateway-server/src/main/resources/application.yml
+++ b/spring-cloud-gateway-server/src/main/resources/application.yml
@@ -1,9 +1,11 @@
 spring:
   application:
     name: gatewayserver
+
+  profiles:
+    active: dev
+
   config:
     import: optional:configserver:http://localhost:8888
-
-
-
-
+    
+  
