--- a/currency-conversion-service-with-ribbonfeign/src/main/resources/application.yml
+++ b/currency-conversion-service-with-ribbonfeign/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 spring:
+  profiles:
+    active: dev
   application:
-    name: CURRENCY-CONVERSION-SERVICE
+    name: conversion-service
   config:
     import: optional:configserver:http://localhost:8888
 
