--- a/spring-security-with-jwt/pom.xml
+++ b/spring-security-with-jwt/pom.xml
@@ -111,6 +111,13 @@
 		    <groupId>org.springframework.cloud</groupId>
 		    <artifactId>spring-cloud-starter-config</artifactId>
 		</dependency>
+		
+		<dependency>
+		    <groupId>net.logstash.logback</groupId>
+		    <artifactId>logstash-logback-encoder</artifactId>
+		    <version>6.6</version>
+		</dependency>
+
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
@@ -124,7 +131,7 @@
 		</dependencies>
 	</dependencyManagement>
 
-	<build>
+	<!--<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -134,6 +141,15 @@
 						<name>gauravkhrnr/${project.artifactId}</name>
 					</image>
 				</configuration>
+			</plugin>
+		</plugins>
+	</build>-->
+	
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
 	</build>
