--- a/spring-security-with-jwt/src/main/resources/application.yml
+++ b/spring-security-with-jwt/src/main/resources/application.yml
@@ -1,5 +1,7 @@
 spring:
+  profiles:
+    active: dev
   application:
     name: security
-  config:
+  config: 
     import: optional:configserver:http://localhost:8888
